--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
     {{ partial "header.html" . }}
   </header>
   <main>
+    {{ partial "breadcrumb.html" . }}
     {{ block "main" . }}{{ end }}
   </main>
   <footer>
