--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,3 +20,19 @@ a {
   color: #00e;
   text-decoration: none;
 }
+
+.breadcrumb ol {
+  padding-left: 0;
+}
+
+.breadcrumb li {
+  display: inline;
+}
+
+.breadcrumb li:not(:last-child)::after {
+  content: "»";
+}
+
+.pagination li {
+  display: inline;
+}
